<resources>
    <string name="app_name">SnowTryAgain</string>
    <string name="button0">constraint_layout</string>
    <string name="button1">button 2</string>
    <string name="button2">button 3</string>
    <string name="button3">button 4</string>
    <string name="button4">button 5</string>
    <string name="button5">button 6</string>
    <string name="button6">button 7</string>
    <string name="button7">button 8</string>
    <string name="button8">button 9</string>
    <string name="button9">button 10</string>
    <string name="android_practice">Android practice</string>

</resources>